# OpenGL-StarterPack

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
examples/: CMakeLists.txt
examples/complex-example/: application.cpp  application.h  gui.cpp  io.cpp  main.cpp
examples/resources/shaders/: basic.glsl  compute-path.glsl  cook-torrance.glsl  flock.glsl  noise-gen.glsl  surface-tess.glsl
examples/simple-example/: example.cpp  example.h  main.cpp
include/GLSP/: buffers.h  camera.h  controller.h  core.h  framebuffer.h  glsp.h  light.h  loaders.h  material.h  mesh.h  object3D.h  renderer.h  shader.h  texture.h  utils.h  widgets.h
src/: buffers.cpp  controller.cpp  core.cpp  framebuffer.cpp  light.cpp  loaders.cpp  material.cpp  mesh.cpp  renderer.cpp  shader.cpp  texture.cpp  utils.cpp  widgets.cpp
